# flygen-ml

./: .gitignore  README.md  pyproject.toml
configs/dataset/: v1_binary.yaml
configs/features/: engineered_v1.yaml  sequence_v1.yaml
docs/: experiment-plan.md  implementation-spec.md  source-data-contract.md  upstream-notes.md  wiki-genotype-classifier-first-results.html
scripts/: README.md
tests/: fixture_builders.py  fixture_registry.py  test_baseline_training.py  test_baselines.py  test_between_reward_segments.py  test_build_features.py  test_compare_prediction_errors_cli.py  test_engineered_features.py  test_evaluate_joint_predictions_cli.py  test_evaluate_model_cli.py  test_evaluate_sequence_model_cli.py  test_experimental_fly_identification.py  test_explain_sequence_occlusion_cli.py  test_export_occlusion_segments_cli.py  test_export_prediction_segments_cli.py  test_export_sequence_embeddings_cli.py  test_export_sequence_tensors_cli.py  test_extract_segments_cli.py  test_feature_aggregation.py  test_filter_occlusion_segments_cli.py  test_group_splits.py  test_inspect_error_buckets_cli.py  test_inspect_predictions_cli.py  test_manifest_globs.py  test_metrics.py  test_pickle_loader.py  test_plot_occlusion_segments_cli.py  test_prediction_inspection.py  test_protocol_parser.py  test_reduce_sequence_embeddings_cli.py  test_reward_events.py  test_segment_inspection.py  test_segment_tables.py  test_sequence_features.py  test_sequence_training.py  test_summarize_sequence_runs_cli.py  test_torch_sequence_training.py  test_train_sequence_model_cli.py
(+80 files in other folders)
